syntax = "proto3";

package game.dto;

option java_multiple_files = true;
option java_package = "com.nekgamebling.game.dto";

import "dto/common.dto.proto";
import "dto/game.dto.proto";

// ============================================
// SESSION DOMAIN DTOs
// ============================================

// Session entity
message SessionDto {
  string id = 1;                          // UUID as string
  string game_id = 2;                     // UUID as string
  string aggregator_id = 3;               // UUID as string
  string player_id = 4;                   // Player identifier
  string token = 5;                       // Session token
  optional string external_token = 6;     // External token (nullable)
  string currency = 7;                    // Currency code
  string locale = 8;                      // Locale code
  PlatformDto platform = 9;               // Platform type
}

// Round entity
message RoundDto {
  string id = 1;                          // UUID as string
  string session_id = 2;                  // UUID as string
  string game_id = 3;                     // UUID as string
  string ext_id = 4;                      // External round ID
  bool finished = 5;                      // Finished status
  TimestampDto created_at = 6;            // Creation timestamp
  optional TimestampDto finished_at = 7;  // Finish timestamp (nullable)
}

// Spin entity
message SpinDto {
  string id = 1;                          // UUID as string
  string round_id = 2;                    // UUID as string
  SpinTypeDto type = 3;                   // Spin type (PLACE, SETTLE, ROLLBACK)
  string amount = 4;                      // BigInteger as string
  string real_amount = 5;                 // BigInteger as string
  string bonus_amount = 6;                // BigInteger as string
  string ext_id = 7;                      // External/transaction ID
  optional string reference_id = 8;       // UUID as string (nullable)
  optional string free_spin_id = 9;       // Free spin ID (nullable)
}

// Round with full details (read model)
message RoundDetailsDto {
  string id = 1;                          // UUID as string
  string place_amount = 2;                // BigInteger as string
  string settle_amount = 3;               // BigInteger as string
  optional string free_spin_id = 4;       // Free spin ID (nullable)
  string currency = 5;                    // Currency code
  GameWithDetailsDto game = 6;            // Game details
  bool is_finished = 7;                   // Finished status
  TimestampDto created_at = 8;            // Creation timestamp
  optional TimestampDto finished_at = 9;  // Finish timestamp (nullable)
}

// Round entity (aggregate version)
message RoundEntityDto {
  string id = 1;                          // UUID as string
  string session_id = 2;                  // UUID as string
  string game_id = 3;                     // UUID as string
  string ext_id = 4;                      // External round ID
  RoundStatusDto status = 5;              // Round status
  repeated SpinEntityDto spins = 6;       // List of spins
  TimestampDto created_at = 7;            // Creation timestamp
  optional TimestampDto finished_at = 8;  // Finish timestamp (nullable)
}

// Spin entity (aggregate version)
message SpinEntityDto {
  string id = 1;                          // UUID as string
  string round_id = 2;                    // UUID as string
  SpinTypeDto type = 3;                   // Spin type
  string amount = 4;                      // BigInteger as string
  string real_amount = 5;                 // BigInteger as string
  string bonus_amount = 6;                // BigInteger as string
  string transaction_id = 7;              // Transaction ID
  optional string reference_id = 8;       // UUID as string (nullable)
  optional string free_spin_id = 9;       // Free spin ID (nullable)
}

// Session aggregate
message SessionAggregateDto {
  string id = 1;                          // UUID as string
  string game_id = 2;                     // UUID as string
  string aggregator_id = 3;               // UUID as string
  string player_id = 4;                   // Player identifier
  string token = 5;                       // Session token
  optional string external_token = 6;     // External token (nullable)
  string currency = 7;                    // Currency code
  string locale = 8;                      // Locale code
  PlatformDto platform = 9;               // Platform type
  repeated RoundEntityDto rounds = 10;    // List of rounds
}

// Round filter for queries
message RoundFilterDto {
  optional string player_id = 1;          // Filter by player ID
  optional string game_identity = 2;      // Filter by game identity
}

// List of sessions
message SessionListDto {
  repeated SessionDto items = 1;
  PaginationMetaDto pagination = 2;
}

// List of rounds
message RoundListDto {
  repeated RoundDto items = 1;
  PaginationMetaDto pagination = 2;
}

// List of round details
message RoundDetailsListDto {
  repeated RoundDetailsDto items = 1;
  PaginationMetaDto pagination = 2;
}

// List of spins
message SpinListDto {
  repeated SpinDto items = 1;
  PaginationMetaDto pagination = 2;
}
